# aws-demo

./: Spacefile  main.py  pyproject.toml  requirements.txt
demo_tg/: pyvenv.cfg
llm/: LLM.py
